--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,5 @@
 {
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true,
+    "python.pythonPath": "/Users/williamwagner/Documents/Bot ROS/venv/bin/python"
+}
